# i3-windows

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.h.in
include/: I3Container.h  WindowManager.h  i3WindowListener.h  utils.h
src/: I3Container.cc  WindowManager.cc  i3WindowListener.cc  main.cc  utils.cc
tests/: CMakeLists.txt  test.cc
